server/api_server.log
  File "/Users/chrisjohansson/Google Drive/Mild Media/Projekt/Egna Projekt/ongoing/leadreplies/server/api_server.py", line 325
    @app.post("/api/auth/register")
                                   ^
IndentationError: unindent does not match any outer indentation level
